test/sema/typeck/struct/unnamed-field-unknown.dora
struct Foo(Int, Bool)
fn f(x: Foo): Bool {
    x.2
}

//====================
// error: unknown field `2` for type `Foo`
// --> unnamed-field-unknown.dora:3:7
//  | struct Foo(Int, Bool)
//  | fn f(x: Foo): Bool {
//  |     x.2
//          ~
//  | }
//  | 
// 1 error found.
